[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenas/personaje.tscn" type="PackedScene" id=1]
[ext_resource path="res://tile/base_ULT.tres" type="TileSet" id=2]
[ext_resource path="res://obj_inte/spawn.tscn" type="PackedScene" id=3]
[ext_resource path="res://obj_inte/portal.tscn" type="PackedScene" id=4]
[ext_resource path="res://obj_inte/puerta.tscn" type="PackedScene" id=5]
[ext_resource path="res://estilosT/editundo.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://scenas/point.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/server.gd" type="Script" id=8]
[ext_resource path="res://sprites/obj_inte/Reloc_pixeli.png" type="Texture" id=9]
[ext_resource path="res://obj_inte/pistola.tscn" type="PackedScene" id=10]
[ext_resource path="res://obj_inte/contend_rasho.tscn" type="PackedScene" id=11]
[ext_resource path="res://estilosT/Label.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenas/SFX.tscn" type="PackedScene" id=14]
[ext_resource path="res://scripts/script_nivel.gd" type="Script" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 48.3754, 65.5505 )

[sub_resource type="DynamicFont" id=2]
size = 42
outline_color = Color( 0.258824, 0.337255, 0.584314, 1 )
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=3]
resource_name = "parpadeo"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.8, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.258824, 0.337255, 0.584314, 1 ), Color( 0.258824, 0.337255, 0.584314, 0 ), Color( 0.258824, 0.337255, 0.584314, 1 ), Color( 0.258824, 0.337255, 0.584314, 0 ) ]
}

[node name="Escenario" type="Node2D" groups=[
"escena",
]]
script = ExtResource( 15 )

[node name="Control" type="Control" parent="."]
margin_left = -64.0
margin_top = -127.0
margin_right = 1628.0
margin_bottom = 947.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.42731
margin_right = 4.42725
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" parent="Control" instance=ExtResource( 13 )]
margin_left = 421.431
margin_top = 420.0
margin_right = 731.431
margin_bottom = 538.0
text = "Solo pensar en esos antivirus me
Enfurece :(
pero es fácil vencerlos si se puedes
si lo llenas de procesos innecesarios.

La unión te hace fuerte!!!"

[node name="tile_fond" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 131079, 13, 0, 131080, 13, 0, 196615, 13, 0, 196616, 13, 0, 196617, 13, 0, 196618, 13, 0, 196619, 13, 0, 196620, 13, 0, 196621, 13, 0, 196622, 13, 0, 196623, 13, 0, 262151, 13, 0, 262152, 13, 0, 458762, 13, 0, 458766, 13, 0, 524298, 13, 0, 524302, 13, 0, 589829, 13, 0, 589830, 13, 0, 589832, 13, 0, 589833, 13, 0, 589834, 13, 0, 589835, 13, 0, 589836, 13, 0, 589837, 13, 0, 589838, 13, 0, 589839, 13, 0, 589840, 13, 0, 589841, 13, 0, 655365, 13, 0, 655366, 13, 0, 655368, 13, 0, 655377, 13, 0, 720901, 13, 0, 720902, 13, 0, 720903, 13, 0, 720904, 13, 0, 720905, 13, 0, 720906, 13, 0, 720907, 13, 0, 720910, 13, 0, 720911, 13, 0, 720912, 13, 0, 720913, 13, 0, 786442, 13, 0, 786443, 13, 0, 786446, 13, 0, 786447, 13, 0 )

[node name="tile_puas" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="tile_lv" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589831, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655367, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720908, 0, 0, 720909, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786444, 0, 0, 786445, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0 )

[node name="Elementos" type="Node2D" parent="."]

[node name="end" parent="Elementos" instance=ExtResource( 5 )]
position = Vector2( 481.576, 381.755 )

[node name="portal" parent="Elementos" instance=ExtResource( 4 )]
position = Vector2( 192.39, 318.854 )

[node name="spawn" parent="Elementos" instance=ExtResource( 3 )]
position = Vector2( 256.407, 94.6369 )

[node name="pincho" type="Node2D" parent="Elementos"]

[node name="contend_rasho" parent="Elementos" groups=[
"rashos_laser",
] instance=ExtResource( 11 )]
position = Vector2( 432.213, 46.7969 )
z_index = 1

[node name="rasho_laser" parent="Elementos/contend_rasho" index="0"]
position = Vector2( -16.4888, 258.258 )
rotation = 1.5708
scale = Vector2( 1, 20.0503 )

[node name="punto_a" parent="Elementos/contend_rasho" index="1"]
position = Vector2( 175.85, 273.229 )

[node name="pistola" parent="Elementos" instance=ExtResource( 10 )]
position = Vector2( 560.691, 396.373 )
position_ball = 2

[node name="server" type="Area2D" parent="Elementos"]
position = Vector2( 567.799, 267.894 )
script = ExtResource( 8 )
tope_server = 2
id_server = 1

[node name="area_coll" type="CollisionShape2D" parent="Elementos/server"]
position = Vector2( -4.6727, -103.152 )
shape = SubResource( 1 )

[node name="fond" type="Sprite" parent="Elementos/server"]
position = Vector2( -166.254, -93.6561 )
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="text" type="Label" parent="Elementos/server"]
modulate = Color( 0.258824, 0.337255, 0.584314, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -249.254
margin_top = -112.656
margin_right = -83.2545
margin_bottom = -74.6561
custom_fonts/font = SubResource( 2 )
text = "0/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim_text" type="AnimationPlayer" parent="Elementos/server"]
anims/parpadeo = SubResource( 3 )

[node name="timer_node" type="Timer" parent="Elementos/server"]
wait_time = 6.0
one_shot = true

[node name="puntos" type="Node2D" parent="."]

[node name="point" parent="puntos" instance=ExtResource( 7 )]
position = Vector2( 339.724, 241.734 )

[node name="point2" parent="puntos" instance=ExtResource( 7 )]
position = Vector2( 468.842, 242.872 )

[node name="personaje" parent="." instance=ExtResource( 1 )]
position = Vector2( 269.101, 113.888 )

[node name="personaje2" parent="." instance=ExtResource( 1 )]
position = Vector2( 354.019, 381.247 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 382.8, 224.152 )
current = true
zoom = Vector2( 0.75, 0.75 )

[node name="SFX" parent="." instance=ExtResource( 14 )]
[connection signal="body_entered" from="Elementos/server" to="Elementos/server" method="_on_server_body_entered"]
[connection signal="body_exited" from="Elementos/server" to="Elementos/server" method="_on_server_body_exited"]
[connection signal="timeout" from="Elementos/server/timer_node" to="Elementos/server" method="_on_timer_node_timeout"]

[editable path="Elementos/contend_rasho"]
